--- a/assessment.html
+++ b/assessment.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>診断</title>
+  <title>ryokobayashi0321が作ったあなたのいいところ診断</title>
   <link rel="stylesheet" href="assessment.css">
 </head>
 
